LATEST SUCCESSFUL BUILD: 10/12/2018 -Abstracted classes -Renamed Main class *b1_states definition

--- a/FlightComputer/FlightComputer/FlightComputer.vcxproj.filters
+++ b/FlightComputer/FlightComputer/FlightComputer.vcxproj.filters
@@ -18,8 +18,16 @@
     <ClCompile Include="test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="state_machine.cpp">
+    <ClCompile Include="b1_states.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="b1_states.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
