--- a/FlightComputer/FlightComputer/FlightComputer.vcxproj
+++ b/FlightComputer/FlightComputer/FlightComputer.vcxproj
@@ -146,8 +146,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="state_machine.cpp" />
+    <ClCompile Include="b1_states.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="b1_states.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
