LATEST BUILD: 10/13/2018 12:37am

--- a/FlightComputer/FlightComputer/FlightComputer.vcxproj.filters
+++ b/FlightComputer/FlightComputer/FlightComputer.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="b1_hardware.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="b1_states.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="b1_hardware.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
