--- a/FlightComputer/FlightComputer/FlightComputer.vcxproj
+++ b/FlightComputer/FlightComputer/FlightComputer.vcxproj
@@ -146,11 +146,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="b1_hardware.cpp" />
     <ClCompile Include="b1_states.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="b1_hardware.h" />
     <ClInclude Include="b1_states.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
