LATEST SUCCESSFUL BUILD: 10/15/2018, 7:33pm abstracted main.cpp into state_machine class plans for event queue system

--- a/FlightComputer/FlightComputer/FlightComputer.vcxproj.filters
+++ b/FlightComputer/FlightComputer/FlightComputer.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClCompile Include="b1_hardware.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="state_machine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="b1_states.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="b1_hardware.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="state_machine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
