--- a/FlightComputer/FlightComputer/FlightComputer.vcxproj.filters
+++ b/FlightComputer/FlightComputer/FlightComputer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="state_machine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="input_PT.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="b1_states.h">
@@ -41,5 +44,16 @@
     <ClInclude Include="state_machine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="input_PT.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="FlightComputer.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
