--- a/FlightComputerV3/FlightComputerV3/FlightComputerV3.vcxproj
+++ b/FlightComputerV3/FlightComputerV3/FlightComputerV3.vcxproj
@@ -68,18 +68,22 @@
     </RemotePostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="b1_hardware.cpp" />
     <ClCompile Include="b1_states.cpp" />
     <ClCompile Include="input.cpp" />
-    <ClCompile Include="logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pinout.cpp" />
+    <ClCompile Include="pyrovalve.cpp" />
+    <ClCompile Include="solenoid.cpp" />
     <ClCompile Include="state_machine.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="b1_hardware.h" />
     <ClInclude Include="b1_states.h" />
     <ClInclude Include="input.h" />
-    <ClInclude Include="logger.h" />
     <ClInclude Include="pinout.h" />
+    <ClInclude Include="pyrovalve.h" />
+    <ClInclude Include="solenoid.h" />
     <ClInclude Include="state_machine.h" />
   </ItemGroup>
   <ItemDefinitionGroup />
