--- a/FlightComputerV4/FlightComputerV4/FlightComputerV4.vcxproj
+++ b/FlightComputerV4/FlightComputerV4/FlightComputerV4.vcxproj
@@ -48,6 +48,9 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <RemotePostBuildEventUseInBuild>false</RemotePostBuildEventUseInBuild>
+    <IncludePath>C:\Program Files (x86)\Windows Kits\10\Include\10.0.17763.0\ucrt\tchar.h;C:\Program Files (x86)\Windows Kits\10\Include\10.0.17763.0\ucrt;D:\Programming\C++\imGUI\imgui-master;D:\Programming\C++\imGUI\imgui-master\examples;C:\Program Files (x86)\Windows Kits\10\Include\10.0.17763.0\um;C:\Program Files (x86)\Windows Kits\10\Include\10.0.17763.0\shared;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files (x86)\Windows Kits\10\Include\10.0.17763.0\ucrt;$(LibraryPath)</LibraryPath>
+    <SourcePath>$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <Link>
@@ -60,12 +63,16 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <Link>
-      <LibraryDependencies>wiringPi</LibraryDependencies>
+      <LibraryDependencies>wiringPi;</LibraryDependencies>
+      <AdditionalLibraryDirectories>C:\Users\Dell\AppData\Local\Microsoft\Linux\HeaderCache\1.0\-1897466461\usr\include\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <RemotePostBuildEvent>
       <Command>gpio export 17 out</Command>
       <Message>export pin 17 using the gpio utility so that we can execute the blink program without sudo</Message>
     </RemotePostBuildEvent>
+    <ClCompile>
+      <AdditionalIncludeDirectories>C:\Users\Dell\AppData\Local\Microsoft\Linux\HeaderCache\1.0\-249775097\usr\local\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="b1_hardware.cpp" />
@@ -78,6 +85,7 @@
     <ClCompile Include="sbat.cpp" />
     <ClCompile Include="solenoid.cpp" />
     <ClCompile Include="state_machine.cpp" />
+    <ClCompile Include="tank_level.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="b1_hardware.h" />
@@ -89,8 +97,16 @@
     <ClInclude Include="sbat.h" />
     <ClInclude Include="solenoid.h" />
     <ClInclude Include="state_machine.h" />
+    <ClInclude Include="tank_level.h" />
   </ItemGroup>
-  <ItemDefinitionGroup />
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
+    <ClCompile>
+      <AdditionalIncludeDirectories>C:\Users\Dell\AppData\Local\Microsoft\Linux\HeaderCache\1.0\-249775097\usr\local\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>C:\Users\Dell\AppData\Local\Microsoft\Linux\HeaderCache\1.0\-1897466461\usr\include\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Link>
+  </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
